--- a/Win32/Debug/Code4DGeraClasses.ini
+++ b/Win32/Debug/Code4DGeraClasses.ini
@@ -1,19 +1,19 @@
 [Gerador]
-ckConectarAutoAoAcessar=1
-cBoxDriver=2
-edtDatabase=D:\PROJETOS MOBILE\Força de Vendas Delphi 10.4\Mobile\DB\fastped.db
-edtUsuario=
+ckConectarAutoAoAcessar=0
+cBoxDriver=3
+edtDatabase=CHURRASCARIA_DOS_MOTORISTAS
+edtUsuario=postgres
 edtHost=localhost
-edtPorta=
+edtPorta=5432
 ckSalvarSenhaBancoProxAcesso=1
-edtSenha=
+edtSenha=415a4a4352415446
 edtPastaDestino=C:\Temp
 ckGravarArquivosPasta=0
 ckAbrirPastaAposGravar=1
 ckAddCabecalho=1
 ckLimparMemoACadaUnit=1
 edtNomeEntities=Entities.<NomeTabela>
-rdGroupFormaAcessoEntities=2
+rdGroupFormaAcessoEntities=1
 ckAddComentarioNomeTabela=0
 ckAddComentarioNomeField=0
 ckExibirMsgSeTipoDesconhecido=1
@@ -22,7 +22,7 @@ ckUpperCamelCaseInTables=1
 ckUpperCamelCaseInFields=1
 rdGroupORM=0
 cBoxSimpleORMAtributoCampo=0
-ckAddAtributoPK=0
+ckAddAtributoPK=1
 edtAddAtributoPKCampo=
-ckAddAtributoAutoInc=0
+ckAddAtributoAutoInc=1
 edtAddAtributoAutoIncCampo=
