Adicionado modo de acesso, 'Orientado a interface'. Esse modo cria a interface, e sua implementação na classse

--- a/Win32/Debug/Code4DGeraClasses.ini
+++ b/Win32/Debug/Code4DGeraClasses.ini
@@ -1,19 +1,19 @@
 [Gerador]
-ckConectarAutoAoAcessar=0
-cBoxDriver=3
-edtDatabase=CHURRASCARIA_DOS_MOTORISTAS
-edtUsuario=postgres
+ckConectarAutoAoAcessar=1
+cBoxDriver=2
+edtDatabase=F:\PROJETOS PESSOAIS\FORÇA DE VENDAS DELPHI 11\FastPed_Mobile\db\fastped.db
+edtUsuario=
 edtHost=localhost
-edtPorta=5432
+edtPorta=
 ckSalvarSenhaBancoProxAcesso=1
-edtSenha=415a4a4352415446
-edtPastaDestino=C:\Temp
-ckGravarArquivosPasta=0
+edtSenha=
+edtPastaDestino=F:\PROJETOS PESSOAIS\FORÇA DE VENDAS DELPHI 11\FastPed_Mobile\Classes
+ckGravarArquivosPasta=1
 ckAbrirPastaAposGravar=1
 ckAddCabecalho=1
 ckLimparMemoACadaUnit=1
-edtNomeEntities=Entities.<NomeTabela>
-rdGroupFormaAcessoEntities=1
+edtNomeEntities=Pessoa
+rdGroupFormaAcessoEntities=4
 ckAddComentarioNomeTabela=0
 ckAddComentarioNomeField=0
 ckExibirMsgSeTipoDesconhecido=1
