Setado os valores para retorno das variáveis através da própia interface

--- a/Win32/Debug/Code4DGeraClasses.ini
+++ b/Win32/Debug/Code4DGeraClasses.ini
@@ -12,7 +12,7 @@ ckGravarArquivosPasta=1
 ckAbrirPastaAposGravar=1
 ckAddCabecalho=1
 ckLimparMemoACadaUnit=1
-edtNomeEntities=Pessoa
+edtNomeEntities=Notificacao
 rdGroupFormaAcessoEntities=4
 ckAddComentarioNomeTabela=0
 ckAddComentarioNomeField=0
